# movies_pipeline

./: .gitignore  README.md
composer/: cloudbuild.yaml
composer/dags/: movies_pipeline_v1.py
composer/dags/schema/: movie_fact.json  movie_info_dim.json  ratings_dim.json
dbt/: Dockerfile  cloudbuild.yaml  profiles.yml  start.sh
dbt/movies/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
dbt/movies/models/movies_revenue/: movie_fact.sql
dbt/movies/models/source/: sources.yaml
dbt/movies/snapshots/: movie_info_scd.sql  ratings_scd.sql
omdb_downloader/: Dockerfile  cloudbuild.yaml  pyproject.toml
omdb_downloader/omdb_downloader/: trigger.py
